# nft

./: .gitignore  LICENSE
devops/: .gitlab-ci.yml  Dockerfile
devops/certs/: rootCA.crt
devops/helm/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
devops/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress-external.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
devops/helm/templates/tests/: test-connection.yaml
hashlip_files/src/: config.js
webapp/: KormiKotaNFT.json  main.py  pyproject.toml
webapp/frontend/: index.html  main.css  reset.css  super.html
webapp/frontend/css/: about.c3e57ffe.css  app.d0af6526.css
webapp/frontend/js/: about.5b206648.js  about.5b206648.js.map  app.a037617f.js  app.a037617f.js.map  chunk-vendors.18e0d49b.js  chunk-vendors.18e0d49b.js.map
webapp/nft/app/: __init__.py  config.py  containers.py  settings.toml
webapp/nft/app/dependencies/: __init__.py  event_scanner.py  event_scanner_state.py  notification_sender.py
webapp/nft/app/internal/: __init__.py  conversions.py  db_operations.py  event_handler.py  scanner_actions.py  statuses.py
webapp/nft/app/resources/: __init__.py  db.py  logger.py  scanner.py
webapp/nft/app/routers/: call_center.py  healthcheck.py  nft.py
webapp/nft/app/schemas/: __init__.py  common.py
webapp/nft/app/schemas/call_center/: schemas.py
webapp/nft/app/schemas/healthcheck/: schemas.py
webapp/nft/app/schemas/nft/: schemas.py
webapp/nft/app/utils/: __init__.py  base_event_scanner_state.py
